[project]
name = "hpio"
version = "1.0.0"
description = "Hybrid Phase Interaction Optimization – Core & Tools"
authors = [{ name="Ralf Krümmel" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = ["numpy", "pandas", "matplotlib", "streamlit", "imageio"]

[project.urls]
Homepage = "https://github.com/kruemmel-python/HPIO"
